@@ -380,14 +380,14 @@ static void php_zval_filter(zval **value, long filter, long flags, zval *options
 
 		ce = Z_OBJCE_PP(value);
 		if (!ce->__tostring) {
-			zval_ptr_dtor(value);
+			zval_dtor(*value);
 			/* #67167: doesn't return null on failure for objects */
 			if (flags & FILTER_NULL_ON_FAILURE) {
 				ZVAL_NULL(*value);
 			} else {
 				ZVAL_FALSE(*value);
 			}
-			return;
+			goto handle_default;
 		}
 	}
 
@@ -396,6 +396,7 @@ static void php_zval_filter(zval **value, long filter, long flags, zval *options
 
 	filter_func.function(*value, flags, options, charset TSRMLS_CC);
 
+handle_default:
 	if (
 		options && (Z_TYPE_P(options) == IS_ARRAY || Z_TYPE_P(options) == IS_OBJECT) &&
 		((flags & FILTER_NULL_ON_FAILURE && Z_TYPE_PP(value) == IS_NULL) || 
